--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -288,9 +288,18 @@ jobs:
     - macos
     - linux
     - windows
+    # GitHub Actions skips this job when any of the dependents fail. And skips
+    # are considered success in their weird logic. So we always run it and fail
+    # ourselves if necessary
+    if: always()
     runs-on: ubuntu-latest
     steps:
     - run: echo "Use this job as the required status check of this workflow"
+    - name: Check that all jobs were successful
+      env:
+        RESULTS: ${{ toJSON(needs) }}
+      run: |
+        echo "$RESULTS" | jq --exit-status 'all(.result == "success")' || exit 1
   trigger-livecheck:
     needs: release
     runs-on: ubuntu-latest
