--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,6 +2,11 @@ name: Main
 
 on:
   push:
+  pull_request:
+    branches:
+    - main
+    types:
+    - reopened
   schedule:
   - cron: "27 8 16 * *"
   workflow_dispatch:
